--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     
 
 
-    <button id="btn">Add a Student Data</button>
-
-    <div id="formDiv"></div>
+    <details>
+        <summary>Enter A Student Data</summary>
+        <div id="formDiv">
+            <form>
+                <input type="text" placeholder="Enter Your Name...."  required id="name">
+                <input type="email" placeholder="Enter Your Email..." required  id="email">
+                <input type="number" placeholder="Roll No..." id="RollNo">
+                <button id="Add">Add</button>
+                </form>
+        </div>
+    </details>
 
 
 
