--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
@@ -15,7 +16,7 @@
         <div id="formDiv">
             <form>
                 <input type="text" placeholder="Enter Your Name...."  required id="name">
-                <input type="email" placeholder="Enter Your Email..." required  id="email">
+                <input type="text" placeholder="Enter Your Email..." required  id="email">
                 <input type="number" placeholder="Roll No..." id="RollNo">
                 <button id="Add">Add</button>
                 </form>
@@ -25,7 +26,8 @@
 
 
 
-
+    <details>
+        <summary>Student Data</summary>
     <table id="tabledata" width="100%" border="1">
         <tr>
             <th>S.NO..</th>
@@ -35,7 +37,7 @@
         </tr>
        
     </table>
-
+</details>
 
 
 
