--- a/index.html
+++ b/index.html
@@ -3,11 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In</title>
+    <title>Document</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
     
-   
+
+
+    <details>
+        <summary>Enter A Student Data</summary>
+        <div id="formDiv">
+            <form>
+                <input type="text" placeholder="Enter Your Name...."  required id="name"><br><br>
+                <input type="text" placeholder="Enter Your Email..." required  id="email"><br><br>
+                <button id="Add">Add</button><br><br>
+                </form>
+        </div>
+    </details>
+
+
+
+
+<div class="container">
+    <table id="tabledata" width="100%">
+        <tr id="stTr">
+            <th>S.NO..</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Roll No..</th>
+            <th>Remove Item</th>
+        </tr>
+       
+    </table>
+
+</div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="portal.js"></script>
 </body>
 </html>
