--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student Portal</title>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
             <form>
                 <input type="text" placeholder="Enter Your Name...."  required id="name"><br><br>
                 <input type="text" placeholder="Enter Your Email..." required  id="email"><br><br>
-                <button id="Add">Add</button><br><br>
+                <div class="buttonDiv"><button id="Add">Add</button></div>
                 </form>
         </div>
     </details>
@@ -27,13 +27,13 @@
 
 
 <div class="container">
-    <table id="tabledata" width="100%">
+    <table id="tabledata" width="100%" cellpadding="50" cellspacing="50">
         <tr id="stTr">
-            <th>S.NO..</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Roll No..</th>
-            <th>Remove Item</th>
+            <th style="text-align: center;">S.NO..</th>
+            <th style="padding-left: 30px;">Name</th>
+            <th style="padding-left: 30px;">Email</th>
+            <th style="padding-left: 30px;">Roll No..</th>
+            <th style="padding-left: 30px;">Remove Item</th>
         </tr>
        
     </table>
@@ -45,6 +45,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="portal.js"></script>
+    <script src="assets/portal.js"></script>
 </body>
 </html>
